--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "firebase": "^7.10.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuefire": "^2.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.18.0",
